--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,9 @@
 
   "WELCOME_TITLE": "Welcome",
 
+  "LOGIN": "Sign in",
+  "SIGNUP": "Sign up",
+
   "LOGIN_TITLE": "Sign in",
   "LOGIN_ERROR": "Unable to sign in. Please check your account information and try again.",
   "LOGIN_BUTTON": "Sign in",
