--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,9 @@
   "NAME": "Name",
   "PASSWORD": "Password",
   "EMAIL": "Email",
+  "LOGIN": "Sign in",
+  "SIGNUP": "Sign up",
+
 
   "TUTORIAL_SLIDE1_TITLE": "Welcome to the Ionic Super Starter",
   "TUTORIAL_SLIDE1_DESCRIPTION": "The <b>Ionic Super Starter</b> is a fully-featured Ionic starter with many pre-built pages and best practices.",
@@ -14,13 +17,12 @@
 
   "WELCOME_TITLE": "Welcome",
 
-  "LOGIN": "Sign in",
-  "SIGNUP": "Sign up",
-
   "LOGIN_TITLE": "Sign in",
   "LOGIN_ERROR": "Unable to sign in. Please check your account information and try again.",
   "LOGIN_BUTTON": "Sign in",
   "SIGNUP_TITLE": "Sign up",
   "SIGNUP_ERROR": "Unable to create account. Please check your account information and try again.",
-  "SIGNUP_BUTTON": "Sign up"
+  "SIGNUP_BUTTON": "Sign up",
+
+  "LIST_MASTER_TITLE": "Friends"
 }
