Basic map pages w/ JS

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
   "LOGIN": "Sign in",
   "SIGNUP": "Sign up",
 
+  "MAP_TITLE": "Map",
 
   "TUTORIAL_SLIDE1_TITLE": "Welcome to the Ionic Super Starter",
   "TUTORIAL_SLIDE1_DESCRIPTION": "The <b>Ionic Super Starter</b> is a fully-featured Ionic starter with many pre-built pages and best practices.",
