--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,5 +26,7 @@
   "SIGNUP_BUTTON": "Sign up",
 
   "LIST_MASTER_TITLE": "Things",
-  "ITEM_CREATE_TITLE": "New Thing"
+
+  "ITEM_CREATE_TITLE": "New Thing",
+  "ITEM_CREATE_CHOOSE_IMAGE": "Add Image"
 }
