--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,8 +25,8 @@
   "SIGNUP_ERROR": "Unable to create account. Please check your account information and try again.",
   "SIGNUP_BUTTON": "Sign up",
 
-  "LIST_MASTER_TITLE": "Things",
+  "LIST_MASTER_TITLE": "Items",
 
-  "ITEM_CREATE_TITLE": "New Thing",
+  "ITEM_CREATE_TITLE": "New Item",
   "ITEM_CREATE_CHOOSE_IMAGE": "Add Image"
 }
