--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,5 +28,7 @@
   "LIST_MASTER_TITLE": "Items",
 
   "ITEM_CREATE_TITLE": "New Item",
-  "ITEM_CREATE_CHOOSE_IMAGE": "Add Image"
+  "ITEM_CREATE_CHOOSE_IMAGE": "Add Image",
+
+  "CARDS_TITLE": "Concerts"
 }
