--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,5 +30,5 @@
   "ITEM_CREATE_TITLE": "New Item",
   "ITEM_CREATE_CHOOSE_IMAGE": "Add Image",
 
-  "CARDS_TITLE": "Concerts"
+  "CARDS_TITLE": "Social"
 }
