--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,8 @@
   "SETTINGS_OPTION3": "Option 3",
   "SETTINGS_OPTION4": "Option 4",
 
+  "SETTINGS_PAGE_PROFILE": "Edit Profile",
+
   "WELCOME_TITLE": "Welcome",
 
   "LOGIN_TITLE": "Sign in",
