--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,8 +6,8 @@
   "SIGNUP": "Sign up",
 
   "TAB1_TITLE": "Items",
-  "TAB2_TITLE": "Favorites",
-  "TAB3_TITLE": "Search",
+  "TAB2_TITLE": "Search",
+  "TAB3_TITLE": "Settings",
 
   "MAP_TITLE": "Map",
 
